// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcMetrolineItem it should render properly when status is "next" 1`] = `
<div
  class="ec-metroline-item"
  data-test="ec-metroline-item"
>
  <div
    class="ec-metroline-item__status"
    data-test="ec-metroline-item__status"
  >
    <div
      class="ec-metroline-item__status-disk"
      data-test="ec-metroline-item__status-disk"
    >
      <span
        data-test="ec-metroline-item__status-disk-enumeration"
      >
        
        1
      
      </span>
    </div>
     
    <div
      class="ec-metroline-item__status-bar"
      data-test="ec-metroline-item__status-bar"
    />
  </div>
   
  <div
    class="ec-metroline-item__content"
    data-test="ec-metroline-item__content"
  >
    <div
      class="ec-metroline-item__header"
      data-test="ec-metroline-item__header"
    >
      <div
        class="ec-metroline-item__header-heading"
        data-test="ec-metroline-item__header-heading"
      >
        <span>
          Payee information
        </span>
      </div>
       
      <!---->
       
      <!---->
    </div>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`EcMetrolineItem should properly when status is "completed" 1`] = `
<div
  class="ec-metroline-item"
  data-test="ec-metroline-item"
>
  <div
    class="ec-metroline-item__status"
    data-test="ec-metroline-item__status"
  >
    <div
      class="ec-metroline-item__status-disk"
      data-test="ec-metroline-item__status-disk"
    >
      <svg
        class="ec-icon"
        data-test="ec-metroline-item__status-disk-completed"
        height="14"
        width="14"
      >
        <use
          xlink:href="#ec-simple-check"
        />
      </svg>
    </div>
     
    <div
      class="ec-metroline-item__status-bar"
      data-test="ec-metroline-item__status-bar"
    />
  </div>
   
  <div
    class="ec-metroline-item__content"
    data-test="ec-metroline-item__content"
  >
    <div
      class="ec-metroline-item__header"
      data-test="ec-metroline-item__header"
    >
      <div
        class="ec-metroline-item__header-heading"
        data-test="ec-metroline-item__header-heading"
      >
        <span>
          Payee information
        </span>
      </div>
       
      <div
        class="ec-metroline-item__header-sub-heading"
        data-test="ec-metroline-item__header-sub-heading"
      >
        <span>
          Amount fully allocated
        </span>
      </div>
       
      <div
        data-test="ec-metroline-item__header-cta"
      >
        ="#&gt;Edit
      </div>
    </div>
     
    <div
      class="ec-metroline-item__main"
      data-test="ec-metroline-item__main"
    >
      <p>
         Lorem ipsum dolor sit amet, voluptates at cumque repudiandae atque quod voluptatum, aperiam dignissimos, vitae, neque mollitia repellat! 
      </p>
    </div>
     
    <div
      class="ec-metroline-item__footer"
      data-test="ec-metroline-item__footer"
    >
      <div
        class="ec-metroline-item__footer-cta"
        data-test="ec-metroline-item__footer-cta"
      >
        ="#&gt;Continue
      </div>
    </div>
  </div>
</div>
`;

exports[`EcMetrolineItem should render properly when is the last item and status is "active" 1`] = `
<div
  class="ec-metroline-item ec-metroline-item--active ec-metroline-item--is-last"
  data-test="ec-metroline-item"
>
  <div
    class="ec-metroline-item__status"
    data-test="ec-metroline-item__status"
  >
    <div
      class="ec-metroline-item__status-disk"
      data-test="ec-metroline-item__status-disk"
    >
      <span
        data-test="ec-metroline-item__status-disk-enumeration"
      >
        
        1
      
      </span>
    </div>
     
    <!---->
  </div>
   
  <div
    class="ec-metroline-item__content"
    data-test="ec-metroline-item__content"
  >
    <div
      class="ec-metroline-item__header"
      data-test="ec-metroline-item__header"
    >
      <div
        class="ec-metroline-item__header-heading"
        data-test="ec-metroline-item__header-heading"
      >
        <span>
          Payee information
        </span>
      </div>
       
      <!---->
       
      <!---->
    </div>
     
    <div
      class="ec-metroline-item__main"
      data-test="ec-metroline-item__main"
    >
      <p>
         Lorem ipsum dolor sit amet, voluptates at cumque repudiandae atque quod voluptatum, aperiam dignissimos, vitae, neque mollitia repellat! 
      </p>
    </div>
     
    <div
      class="ec-metroline-item__footer"
      data-test="ec-metroline-item__footer"
    >
      <div
        class="ec-metroline-item__footer-cta"
        data-test="ec-metroline-item__footer-cta"
      >
        ="#&gt;Continue
      </div>
    </div>
  </div>
</div>
`;

exports[`EcMetrolineItem should render properly when is the last item and status is "completed" 1`] = `
<div
  class="ec-metroline-item ec-metroline-item--active ec-metroline-item--is-last"
  data-test="ec-metroline-item"
>
  <div
    class="ec-metroline-item__status"
    data-test="ec-metroline-item__status"
  >
    <div
      class="ec-metroline-item__status-disk"
      data-test="ec-metroline-item__status-disk"
    >
      <svg
        class="ec-icon"
        data-test="ec-metroline-item__status-disk-completed"
        height="14"
        width="14"
      >
        <use
          xlink:href="#ec-simple-check"
        />
      </svg>
    </div>
     
    <!---->
  </div>
   
  <div
    class="ec-metroline-item__content"
    data-test="ec-metroline-item__content"
  >
    <div
      class="ec-metroline-item__header"
      data-test="ec-metroline-item__header"
    >
      <div
        class="ec-metroline-item__header-heading"
        data-test="ec-metroline-item__header-heading"
      >
        <span>
          Payee information
        </span>
      </div>
       
      <div
        class="ec-metroline-item__header-sub-heading"
        data-test="ec-metroline-item__header-sub-heading"
      >
        <span>
          Amount fully allocated
        </span>
      </div>
       
      <div
        data-test="ec-metroline-item__header-cta"
      >
        ="#&gt;Edit
      </div>
    </div>
     
    <div
      class="ec-metroline-item__main"
      data-test="ec-metroline-item__main"
    >
      <p>
         Lorem ipsum dolor sit amet, voluptates at cumque repudiandae atque quod voluptatum, aperiam dignissimos, vitae, neque mollitia repellat! 
      </p>
    </div>
     
    <div
      class="ec-metroline-item__footer"
      data-test="ec-metroline-item__footer"
    >
      <div
        class="ec-metroline-item__footer-cta"
        data-test="ec-metroline-item__footer-cta"
      >
        ="#&gt;Continue
      </div>
    </div>
  </div>
</div>
`;

exports[`EcMetrolineItem should render properly when is the last item and status is "next" 1`] = `
<div
  class="ec-metroline-item ec-metroline-item--is-last"
  data-test="ec-metroline-item"
>
  <div
    class="ec-metroline-item__status"
    data-test="ec-metroline-item__status"
  >
    <div
      class="ec-metroline-item__status-disk"
      data-test="ec-metroline-item__status-disk"
    >
      <span
        data-test="ec-metroline-item__status-disk-enumeration"
      >
        
        1
      
      </span>
    </div>
     
    <!---->
  </div>
   
  <div
    class="ec-metroline-item__content"
    data-test="ec-metroline-item__content"
  >
    <div
      class="ec-metroline-item__header"
      data-test="ec-metroline-item__header"
    >
      <div
        class="ec-metroline-item__header-heading"
        data-test="ec-metroline-item__header-heading"
      >
        <span>
          Payee information
        </span>
      </div>
       
      <!---->
       
      <!---->
    </div>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`EcMetrolineItem should render properly when status is "active" 1`] = `
<div
  class="ec-metroline-item ec-metroline-item--active"
  data-test="ec-metroline-item"
>
  <div
    class="ec-metroline-item__status"
    data-test="ec-metroline-item__status"
  >
    <div
      class="ec-metroline-item__status-disk"
      data-test="ec-metroline-item__status-disk"
    >
      <span
        data-test="ec-metroline-item__status-disk-enumeration"
      >
        
        1
      
      </span>
    </div>
     
    <div
      class="ec-metroline-item__status-bar"
      data-test="ec-metroline-item__status-bar"
    />
  </div>
   
  <div
    class="ec-metroline-item__content"
    data-test="ec-metroline-item__content"
  >
    <div
      class="ec-metroline-item__header"
      data-test="ec-metroline-item__header"
    >
      <div
        class="ec-metroline-item__header-heading"
        data-test="ec-metroline-item__header-heading"
      >
        <span>
          Payee information
        </span>
      </div>
       
      <!---->
       
      <!---->
    </div>
     
    <div
      class="ec-metroline-item__main"
      data-test="ec-metroline-item__main"
    >
      <p>
         Lorem ipsum dolor sit amet, voluptates at cumque repudiandae atque quod voluptatum, aperiam dignissimos, vitae, neque mollitia repellat! 
      </p>
    </div>
     
    <div
      class="ec-metroline-item__footer"
      data-test="ec-metroline-item__footer"
    >
      <div
        class="ec-metroline-item__footer-cta"
        data-test="ec-metroline-item__footer-cta"
      >
        ="#&gt;Continue
      </div>
    </div>
  </div>
</div>
`;
